--- a/package.json
+++ b/package.json
@@ -16,6 +16,13 @@
     "pg": "^8.7.3"
   },
   "devDependencies": {
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "prettier": "^2.6.2"
+  },
+  "prettier": {
+      "tabWidth": 4,
+      "semi": true,
+      "singleQuote": false,
+      "printWidth": 100
   }
 }
